# lineageiq

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  TASKS.md  docker-compose.yml  package.json  pyproject.toml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/agent/: __init__.py  cli.py  knowledge.py  llm.py  orchestrator.py  policy.py  prompts.py  types.py  validation.py
backend/app/api/v1/: demo.py  evaluations.py  incidents.py  lineage.py  router.py  system.py
backend/app/core/: config.py  errors.py  logging.py  middleware.py  taxonomy.py
backend/app/db/: base.py  cli.py  session.py
backend/app/detection/: __init__.py  cli.py  detectors.py  reconcile.py  runner.py  severity.py
backend/app/evaluation/: __init__.py  baseline.py  cli.py  metrics.py  runner.py  schemas.py
backend/app/incidents/: __init__.py  cli.py  injectors.py  manifest.py  restore.py  service.py
backend/app/lineage/: __init__.py  graph_config.py  service.py  store.py  types.py
backend/app/ml/: __init__.py  cli.py  features.py  historical.py  inference.py  matching.py  training.py
backend/app/ml/artifacts/: metrics.json
backend/app/models/: __init__.py  business.py  operational.py
backend/app/observability/: tracing.py
backend/app/schemas/: detection.py  incident.py  investigation.py  system.py
backend/app/services/: incident_query.py  system_service.py
backend/app/simulator/: __init__.py  cli.py  config.py  fx.py  generator.py  validator.py
backend/app/tools/: __init__.py  base.py  historical_tool.py  lineage_tool.py  log_tool.py  pipeline_tool.py  registry.py  schema_tool.py  sql_guard.py  sql_tool.py
backend/tests/: conftest.py
backend/tests/e2e/: test_investigation.py
backend/tests/integration/: test_evaluation.py  test_evaluation_api.py  test_incident_api.py  test_incident_pipeline.py  test_lineage_api.py  test_ml.py  test_seed_and_validate.py
backend/tests/security/: test_sql_guard.py  test_tool_safety.py
backend/tests/unit/: test_agent.py  test_detectors.py  test_generator.py  test_health.py  test_injectors.py  test_lineage.py  test_matching.py  test_validation.py  test_validator.py
data/evaluation/: latest_report.md  manual_benchmark_template.csv
data/incident_manifests/: delayed_pipeline-01.json  delayed_pipeline-02.json  delayed_pipeline-03.json  delayed_pipeline-04.json  delayed_pipeline-05.json  delayed_pipeline-06.json  delayed_pipeline-07.json  delayed_pipeline-08.json  duplicate_transaction-01.json  duplicate_transaction-02.json  duplicate_transaction-03.json  duplicate_transaction-04.json  duplicate_transaction-05.json  duplicate_transaction-06.json  duplicate_transaction-07.json  duplicate_transaction-08.json  incorrect_aggregation-01.json  incorrect_aggregation-02.json  incorrect_aggregation-03.json  incorrect_aggregation-04.json  incorrect_aggregation-05.json  incorrect_aggregation-06.json  incorrect_aggregation-07.json  incorrect_aggregation-08.json  missing_customer_mapping-01.json  missing_customer_mapping-02.json  missing_customer_mapping-03.json  missing_customer_mapping-04.json  missing_customer_mapping-05.json  missing_customer_mapping-06.json  missing_customer_mapping-07.json  missing_customer_mapping-08.json  null_contamination-01.json  null_contamination-02.json  null_contamination-03.json  null_contamination-04.json  null_contamination-05.json  null_contamination-06.json  null_contamination-07.json  null_contamination-08.json  (+40 more)
docs/: AGENT_DESIGN.md  ARCHITECTURE.md  DATA_MODEL.md  DEMO_SCRIPT.md  EVALUATION.md  PLAN.md  SECURITY.md
docs/decisions/: 0001-record-architecture-decisions.md  0002-networkx-lineage.md  0003-llm-abstraction.md  0004-money-and-time.md  0005-db-postgres-sqlite.md  0006-incident-reproducibility.md
frontend/: Dockerfile  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/evaluation/: page.tsx
frontend/app/incidents/: page.tsx
frontend/app/incidents/[id]/: page.tsx
frontend/app/lineage/: page.tsx
frontend/lib/: api.ts
frontend/tests/: api.test.ts
frontend/types/: api.ts
scripts/: init-readonly-role.sql
