[project]
name = "lineageiq"
version = "0.1.0"
description = "LineageIQ — evidence-grounded data-incident investigation platform (synthetic)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.5",
    "xgboost>=2.0",
    "networkx>=3.3",
    "sqlglot>=25.0",
    "python-json-logger>=2.0",
    "httpx>=0.27",
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-exporter-otlp>=1.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-python-dateutil",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["backend"]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["backend"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "RUF"]
# B008: FastAPI Depends() in defaults.
# The remaining ignores keep the code runnable on BOTH Python 3.9 (local verification, ADR-0005)
# and the 3.12 target. These rules would push 3.10/3.11-only constructs:
#   UP017 -> datetime.UTC; UP007/UP045 -> X | None at runtime in SQLAlchemy Mapped[];
#   UP042 -> enum.StrEnum (3.11+); B905/RUF007 -> zip(strict=)/itertools.pairwise (3.10+).
ignore = ["B008", "UP017", "UP007", "UP045", "UP042", "B905", "RUF007"]

[tool.ruff.lint.per-file-ignores]
"backend/tests/**" = ["E501"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
warn_unused_ignores = true
disallow_untyped_defs = false
files = ["backend/app"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
addopts = "-q"
pythonpath = ["backend"]
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "security: security tests",
    "e2e: end-to-end tests",
]
filterwarnings = ["ignore::DeprecationWarning"]
